--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -14,6 +14,7 @@ $yellow: #f89406;
 $aqua: #7FDBFF;
 
 $base-font: "weblysleek_uilight", sans-serif;
+$post-text-font: 'Open Sans', sans-serif;
 $code-font: "LiberationMonoRegular",monospace;
 $theme-color: $red-gixlg;
 $theme-post-color: $red-gixlg;
